` Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
`
` Copyright 2012-2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.
`
` Modifications copyright (C) 2017 Uber Technologies, Inc.
`
` Licensed under the Apache License, Version 2.0 (the "License"). You may not
` use this file except in compliance with the License. A copy of the License is
` located at
`
` http://aws.amazon.com/apache2.0
`
` or in the "license" file accompanying this file. This file is distributed on
` an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
` express or implied. See the License for the specific language governing
` permissions and limitations under the License.

` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/TimerStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagrams.


@startuml
title Timer State Transitions

[*] --> CREATED
CANCEL_TIMER_COMMAND_CREATED --> CANCEL_TIMER_COMMAND_CREATED: CANCEL
CANCEL_TIMER_COMMAND_CREATED --> CANCEL_TIMER_COMMAND_SENT: CANCEL_TIMER
CANCEL_TIMER_COMMAND_SENT --> CANCELED: TIMER_CANCELED
CREATED --> START_COMMAND_CREATED: SCHEDULE
START_COMMAND_CREATED --> START_COMMAND_CREATED: START_TIMER
START_COMMAND_CREATED --> START_COMMAND_RECORDED: TIMER_STARTED
START_COMMAND_CREATED --> CANCELED: CANCEL
START_COMMAND_RECORDED --> FIRED: TIMER_FIRED
START_COMMAND_RECORDED --> CANCEL_TIMER_COMMAND_CREATED: CANCEL
FIRED --> [*]
CANCELED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
